--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mission préparation des 26 ans</title>
+    <title>Mission : préparation des 26 ans</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Mission préparation des 26 ans</h1>
+    <h1>Mission : préparation des 26 ans</h1>
     <p>Bienvenue agent Duck ! Suis les indices qui te méneront à ton anniversaire.</p>
     <div id="indice">Active la géolocalisation pour commencer ta mission.</div>
     <script src="script.js"></script>
