--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission : préparation des 26 ans</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Mission : préparation des 26 ans</h1>
-    <p>Bienvenue agent Duck ! Suis les indices qui te méneront à ton anniversaire.</p>
-    <div id="indice">Active la géolocalisation pour commencer ta mission.</div>
+    <div class="container">
+        <h1>Mission : préparation des 26 ans</h1>
+        <p>Bienvenue agent Duck ! Suis les indices qui te mèneront à ton anniversaire.</p>
+
+        <div class="map-container">
+            <div id="map"></div>
+        </div>
+
+        <div class="controls">
+            <button id="search-btn" class="btn">
+                <span id="search-text">Vérifier ma position</span>
+                <div id="loading-spinner" class="spinner hidden"></div>
+            </button>
+        </div>
+
+        <div class="found-indices">
+            <h2>Indices trouvés</h2>
+            <div id="indices-list"></div>
+        </div>
+
+        <div id="current-indice" class="current-indice"></div>
+    </div>
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
