--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="controls">
             <button id="search-btn" class="btn">
-                <span id="search-text">Vérifier ma position</span>
+                <span id="search-text">Rechercher</span>
                 <div id="loading-spinner" class="spinner hidden"></div>
             </button>
         </div>
