--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                 <div id="loading-spinner" class="spinner hidden"></div>
             </button>
         </div>
-
-        <div id="current-indice" class="current-indice"></div>
-
+        <div id="current-indice" class="current-indice" style="white-space: pre-line;"></div>
         <div class="found-indices">
             <h2 class="toggle-title">Indices trouvés ▼</h2>
             <div id="indices-list" class="indices-content hidden"></div>
